# modules/apps/commerce/commerce-qualifier/commerce-qualifier-rest-api/src/main/java/com/liferay/commerce/qualifier/rest/resource/v1_0/QualifierResource.java
@@ -75,8 +75,7 @@ public interface QualifierResource {
 			Long id, String callbackURL, Object object)
 		throws Exception;
 
-	public Qualifier patchQualifier(Long id, Qualifier qualifier)
-		throws Exception;
+	public Qualifier patchQualifier(Long id) throws Exception;
 
 	public default void setContextAcceptLanguage(
 		AcceptLanguage contextAcceptLanguage) {
