# modules/apps/commerce/commerce-qualifier/commerce-qualifier-rest-impl/src/main/java/com/liferay/commerce/qualifier/rest/internal/dto/v1_0/converter/QualifierEntityDTOConverter.java
@@ -90,6 +90,7 @@ public class QualifierEntityDTOConverter
 				info5 = info.getOrDefault("info5", StringPool.BLANK);
 				name = commerceQualifierMetadata.getRESTName(
 					_getClassPK(commerceQualifierEntry, qualifierMode));
+				targetDefault = commerceQualifierEntry.getTargetDefault();
 				type = commerceQualifierMetadata.getRESTModelName();
 			}
 		};
